<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="30" android:orientation="1" android:id="@id/login_layout" android:layout_width="-1" android:layout_height="-1">
    <FrameLayout android:padding="10dp" android:layout_width="-1" android:layout_height="-2">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textStyle="1" android:textColor="0x1060000" android:layout_gravity="11" android:id="@id/TextView01" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:text="@string/user_signin_header1" />
    </FrameLayout>
    <FrameLayout android:layout_width="-1" android:layout_height="-2" />
    <Button android:id="@id/user_signin_signup_Button" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/button_signup" />
    <FrameLayout android:padding="10dp" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textStyle="1" android:textColor="0x1060000" android:layout_gravity="11" android:id="@id/user_signin_header2_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:text="@string/user_signin_header2" />
    </FrameLayout>
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:gravity="3" android:id="@id/user_signin_username_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/pref_server_username_title" />
    <EditText android:textAppearance="?unknown_attr_ref: 1010041" android:gravity="7" android:id="@id/user_signin_username_EditText" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:scrollHorizontally="true" android:inputType="21" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:gravity="3" android:id="@id/user_signin_password_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/pref_server_password_title" />
    <EditText android:textAppearance="?unknown_attr_ref: 1010041" android:gravity="7" android:id="@id/user_signin_password_EditText" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:scrollHorizontally="true" android:inputType="81" />
    <LinearLayout android:id="@id/user_signin_buttons_row_LinearLayout" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
        <Button android:id="@id/user_signin_login_Button" android:layout_width="0dp" android:layout_height="-2" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/button_login" android:layout_weight="1.0" />
        <Button android:id="@id/user_signin_cancel_Button" android:layout_width="0dp" android:layout_height="-2" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/button_cancel" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:layout_gravity="1" android:id="@id/user_signin_message_TextView" android:layout_width="-2" android:layout_height="0dp" android:layout_margin="20dp" android:text="" android:layout_weight="1.0" />
</LinearLayout>
