<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="-1" android:layout_height="-1">
    <ToggleButton android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/main_on_off_ToggleButton" android:layout_width="120dp" android:layout_height="50dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:textOn="@string/main_activity_toggle_on" android:textOff="@string/main_activity_toggle_off" android:textScaleX="0.8" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:gravity="11" android:id="@id/main_title_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="10dp" android:text="@string/main_activity_title" android:textScaleX="0.9" android:layout_toLeftOf="@id/main_on_off_ToggleButton" android:layout_alignBaseline="@id/main_on_off_ToggleButton" android:layout_alignParentLeft="true" />
    <ListView android:id="@id/main_access_list_ListView" android:padding="10dp" android:layout_width="-1" android:layout_height="-1" android:drawSelectorOnTop="false" android:dividerHeight="5dp" android:layout_below="@id/main_on_off_ToggleButton" />
</RelativeLayout>
