<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="1" android:id="@id/accessListItem_Layout" android:layout_width="-1" android:layout_height="-2"
    <RelativeLayout android:background="#111111" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
        <ImageView android:id="@id/accessListItem_session_status_ImageView" android:layout_width="-2" android:layout_height="-2" android:layout_margin="5dp" android:src="@drawable/ic_stat_example" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/accessListItem_status_image_ContentDesc" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:id="@id/accessListItem_session_status_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:text="@string/accessList_session_status_unauthorized" android:textScaleX="0.85" android:layout_toRightOf="@id/accessListItem_session_status_ImageView" android:layout_alignBottom="@id/accessListItem_session_status_ImageView" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/accessListItem_hostname_TextView" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:text="@string/business_message_access_timeout" android:textScaleX="0.85" android:layout_alignBottom="@id/accessListItem_session_status_ImageView" android:layout_alignParentRight="true" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/accessListItem_label_earnings_TextView" android:padding="5dp" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:text="@string/accessListItem_label_earnings" android:textScaleX="0.85" android:layout_below="@id/accessListItem_session_status_ImageView" android:layout_alignParentLeft="true" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/accessListItem_earnings_TextView" android:padding="5dp" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:text="12.73 USD" android:textScaleX="0.85" android:layout_toRightOf="@id/accessListItem_label_earnings_TextView" android:layout_alignBaseline="@id/accessListItem_label_earnings_TextView" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/accessListItem_label_duration_TextView" android:padding="5dp" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:text="@string/accessListItem_label_duration" android:textScaleX="0.85" android:layout_toRightOf="@id/accessListItem_earnings_TextView" android:layout_alignBaseline="@id/accessListItem_label_earnings_TextView" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@id/accessListItem_duration_TextView" android:padding="5dp" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:text="03min 57sec" android:textScaleX="0.85" android:layout_toRightOf="@id/accessListItem_label_duration_TextView" android:layout_alignBaseline="@id/accessListItem_label_earnings_TextView" />
    </RelativeLayout>
</RelativeLayout>
